--- a/client/index.ejs
+++ b/client/index.ejs
@@ -10,12 +10,15 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script defer src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <title><%= title %></title>
 
     <script>window.__initialData__ = <%- initialData %></script>
-  <link href="http://45.77.248.142:80/main.e3123777.css" rel="stylesheet"></head>
+  <link href="http://45.77.248.142:80/main.d517c878.css" rel="stylesheet"></head>
   <body>
     <div id="react-root"><%- markup %></div>
-  <script type="text/javascript" src="http://45.77.248.142:80/manifest.d344e94f.js"></script><script type="text/javascript" src="http://45.77.248.142:80/vendor.410bfbc1.js"></script><script type="text/javascript" src="http://45.77.248.142:80/main.a0004301.js"></script></body>
+  <script type="text/javascript" src="http://45.77.248.142:80/manifest.baa7045b.js"></script><script type="text/javascript" src="http://45.77.248.142:80/vendor.af030557.js"></script><script type="text/javascript" src="http://45.77.248.142:80/main.a43ed003.js"></script></body>
 </html>
