--- a/client/index.ejs
+++ b/client/index.ejs
@@ -10,13 +10,13 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="https://cdn.bootcss.com/material-design-lite/1.3.0/material.indigo-pink.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/material-design-lite/1.3.0/material.min.js"></script>
     <title><%= title %></title>
 
     <script>window.__initialData__ = <%- initialData %></script>
   <link href="http://45.77.248.142:80/main.f209cbf2.css" rel="stylesheet"></head>
   <body>
     <div id="react-root"><%- markup %></div>
-  <script type="text/javascript" src="http://45.77.248.142:80/manifest.dd2a66a1.js"></script><script type="text/javascript" src="http://45.77.248.142:80/vendor.19473949.js"></script><script type="text/javascript" src="http://45.77.248.142:80/main.f8d2af6e.js"></script></body>
+  <script type="text/javascript" src="http://45.77.248.142:80/manifest.5f8a9f1b.js"></script><script type="text/javascript" src="http://45.77.248.142:80/vendor.19473949.js"></script><script type="text/javascript" src="http://45.77.248.142:80/main.1c8dc241.js"></script></body>
 </html>
