--- a/client/index.ejs
+++ b/client/index.ejs
@@ -6,7 +6,7 @@
     <meta name="robots" content="index,follow"/>
     <meta name="googlebot" content="index,follow"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -15,8 +15,8 @@
     <title><%= title %></title>
 
     <script>window.__initialData__ = <%- initialData %></script>
-  <link href="http://45.77.248.142:80/main.f209cbf2.css" rel="stylesheet"></head>
+  <link href="http://45.77.248.142:80/main.983d945a.css" rel="stylesheet"></head>
   <body>
     <div id="react-root"><%- markup %></div>
-  <script type="text/javascript" src="http://45.77.248.142:80/manifest.5f8a9f1b.js"></script><script type="text/javascript" src="http://45.77.248.142:80/vendor.19473949.js"></script><script type="text/javascript" src="http://45.77.248.142:80/main.1c8dc241.js"></script></body>
+  <script type="text/javascript" src="http://45.77.248.142:80/manifest.ae0ceedf.js"></script><script type="text/javascript" src="http://45.77.248.142:80/vendor.b4a9722b.js"></script><script type="text/javascript" src="http://45.77.248.142:80/main.5f193995.js"></script></body>
 </html>
